add priority to tasks

--- a/imports/ui/components/tasks/Task.styl
+++ b/imports/ui/components/tasks/Task.styl
@@ -1,2 +1,6 @@
-.checked
-	background silver
+.table tbody>tr>td
+	&.vert-align
+		vertical-align middle
+		padding 0 0.3em
+	&.condensed
+		width 10px
