--- a/imports/ui/components/tasks/Task.styl
+++ b/imports/ui/components/tasks/Task.styl
@@ -11,3 +11,18 @@
 .pushRight
 	float right
 	color red
+	
+.inline-my-form
+	margin-left 0 !important
+	margin-right 0 !important
+	.no-padding
+		padding-right 0 !important
+		padding-left 0 !important
+		
+.checkbox
+	margin-top 5px !important
+	margin-bottom 5px !important
+	padding-top 8px !important
+
+.my-float-right
+	float right !important
