--- a/imports/ui/components/tasks/Task.styl
+++ b/imports/ui/components/tasks/Task.styl
@@ -10,6 +10,13 @@
 	
 .pushRight
 	float right
+	&.label-counter
+		padding 0.6em
+		margin-top -0.3em
+		margin-right -1em
+		margin-left 0.7em
+	
+.red
 	color red
 	
 .inline-my-form
