stylize elements in taskboard

--- a/imports/ui/components/tasks/Task.styl
+++ b/imports/ui/components/tasks/Task.styl
@@ -7,6 +7,7 @@
 		
 .sortCheckbox
 	padding 0 0.3em
+	color #286090
 	
 .pushRight
 	float right
@@ -15,7 +16,10 @@
 		margin-top -0.3em
 		margin-right -1em
 		margin-left 0.7em
-	
+		
+.megaBadges
+	font-size 0.7em
+
 .red
 	color red
 	
