stylize lists and tasks

--- a/imports/ui/components/tasks/Task.styl
+++ b/imports/ui/components/tasks/Task.styl
@@ -8,7 +8,7 @@
 .sortCheckbox
 	padding 0 0.3em
 	color #286090
-	
+
 .pushRight
 	float right
 	&.label-counter
@@ -20,6 +20,7 @@
 .megaBadges
 	font-size 0.7em
 	margin-left 0.5em
+	background-color #5bc0de !important
 
 .red
 	color red
