--- a/imports/ui/components/tasks/Task.styl
+++ b/imports/ui/components/tasks/Task.styl
@@ -24,6 +24,8 @@
 
 .red
 	color red
+.orange
+	color: orange
 	
 .inline-my-form
 	margin-left 0 !important
@@ -39,3 +41,12 @@
 
 .my-float-right
 	float right !important
+	&.sorting-tasks
+		margin-top 10px
+		padding-right 0
+		
+.fullWidth
+	width 100% !important
+	
+.editField
+	margin-bottom 0px
