--- a/imports/ui/components/tasks/Task.styl
+++ b/imports/ui/components/tasks/Task.styl
@@ -11,6 +11,7 @@
 
 .pushRight
 	float right
+	margin-left 0.3em
 	&.label-counter
 		padding 0.6em
 		margin-top -0.3em
@@ -50,3 +51,13 @@
 	
 .editField
 	margin-bottom 0px
+	
+.text-center
+	text-align center
+	vertical-align middle !important
+	
+.frequency-label
+	margin-top 0.7em !important
+	
+.tableTitle
+	color orange
